--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+html{
+    font-family: "Poppins", sans-serif !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Input-Number input{
+    text-align: center !important;
+    border: none !important;
+
+}
+.Input-Number input:active {
+    text-align: center !important;
+    border: none !important;
+box-shadow: none !important;
+}
+.Input-Number  {
+    text-align: center !important;
+    background-color: transparent !important;
+    border: none !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+/* _______________________________ Scroll _________________________ */
+
+.custom__scroll{
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.hide__scroll::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
 }
 
-.App-link {
-  color: #61dafb;
+.custom__scroll::-webkit-scrollbar {
+    width: 50px;
+    height: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Track */
+.custom__scroll::-webkit-scrollbar-track {
+    background: #f1f1f1 !important;
+}
+
+/* Handle */
+.custom__scroll::-webkit-scrollbar-thumb {
+    background-color: #6895D2 !important;
+    border-radius: 2em;
+}
+
+/* Handle on hover */
+.custom__scroll::-webkit-scrollbar-thumb:hover {
+    background-color: #6895D2 !important;
+}
+
+
+
+/*       ScrollBar 1        */
+
+.scrollbar::-webkit-scrollbar {
+    width: 10px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+    border-radius: 8px;
+    background-color: #D04848;
+    border: 1px solid #cacaca;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color:  #e7e7e7;
+}
+
+.ant-collapse-expand-icon{
+    color: white !important;
+}
+.picHolder{
+transition: 0.3s ease-in-out !important;
+}
+.footer-menu{
+    color: white !important;
+}
+.footer-menu:hover {
+    color: #6895D2 !important;
 }
