--- a/frontend/src/components/itemContainer/itemContainer.styles.css
+++ b/frontend/src/components/itemContainer/itemContainer.styles.css
@@ -49,7 +49,7 @@ opacity: 1;
 
 .addToCart-btn:hover .addToCart-btn-logo {
     transition: .3s ease !important;
-opacity: 1;
+display: flex !important;
     z-index: 10 !important;
 
 }
@@ -58,9 +58,9 @@ opacity: 1;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
     border: 1px solid rgba(255, 255, 255, 0.3);
-    opacity: 0;
+
     z-index: 10 !important;
-display: none;
+display: none !important;
 }
 .addToCart-btn:hover .addToCart-btn-text {
     transition: .3s ease !important;
