--- a/frontend/src/route/category/grid.styles.css
+++ b/frontend/src/route/category/grid.styles.css
@@ -1,8 +1,8 @@
-.grid-container:hover div {
+/* .grid-container:hover div {
 background-color: #6895D2 !important;
 transition: 0.3s ease;
 }
 .grid-container:hover  {
     border-color: #6895D2 !important;
     transition: 0.3s ease;
-}
+} */
